src/test/deca/avecObjet/valid/class_one_method_void copy.deca
// Description :
//    Classe contenant une méthode void sans paramètre.
//
// Resultats :
//    OK

class A {
    void f() {
    }
}

{
}

