src/test/deca/avecObjet/invalid/method_call_in_static_context_custom.deca
// Description :
// appel de méthode non statique depuis main
//
// Resultats :
// Erreur contextuelle
// Ligne 9 : appel invalide

class M {
    void foo() {}
    public static void main() {
        foo(); // invalide
    }
}
